Se agrega navbar y se agrega jquery y boostrap js

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="bg-dark">
+<body style="background-color:#181818">
   <div class="container-fluid">
     <app-root></app-root>
   </div>
